@@ -9,6 +9,15 @@
 ==============================================================================
 
 ------------------------------------------------------------------------------
+--- Functionality changes from Asterisk 13.21-cert3 to Asterisk 13.21-cert4---
+------------------------------------------------------------------------------
+
+Core
+------------------
+ * ast_bt_get_symbols() now returns a vector of strings instead of an
+   array of strings.  This must be freed with ast_bt_free_symbols.
+
+------------------------------------------------------------------------------
 --- Functionality changes from Asterisk 13.21.0 to Asterisk 13.22.0 ----------
 ------------------------------------------------------------------------------
 
